--- a/src/Assignment-5/assignment5.html
+++ b/src/Assignment-5/assignment5.html
@@ -12,7 +12,29 @@
 	<div id="container">
 
 	<!-- Start your code from here -->
-	
+	<div class="outer">
+		<div class="card">
+		<section class="first">
+			<img src="images/plant-1.png">
+		</section>
+		<section class="second">
+			<h2>A Leafy One</h2>
+			<p> Blossom dorset health scabious ipsum. Grape hyacinth bee balm bird of paradise obedient plant african lily. Spring foxglove florist's nighmare primrose.</p>
+			<button type="button"> SO LEAFY</button>
+		</section>
+		</div>
+		<div class="card">
+			<section class="first">
+				<img src="images/plant-4.png">
+			</section>
+			<section class="second">
+				<h2>Some Pointy ones</h2>
+				<p>Florem ipsum sugarbush bloom red rose waxflower coneflower ginger.Saxifrage forget-me-not obedient plant.</p>
+				<button type="button">I'LL TAKE 10</button>
+			</section>
+			</div>
+		
+	</div>
 
 	<!-- End your code -->
 
